--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vxe-table-plugin-element": "^4.0.4",
     "xe-utils": "^3.7.4",
     "xterm": "^5.3.0",
+    "xterm-addon-attach": "^0.9.0",
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
