--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.3.1",
+    "@guolao/vue-monaco-editor": "^1.5.5",
     "@types/js-yaml": "^4.0.9",
     "auto-changelog": "^2.5.0",
     "axios": "^1.9.0",
