--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 开发环境自定义的环境变量（命名必须以 VITE_ 开头）
 
 ## 后端接口公共路径（如果解决跨域问题采用反向代理就只需写公共路径）
-VITE_BASE_API = 'https://mock.mengxuegu.com/mock/66be0c9755057713835fe7c0/'
+
 
 ## 路由模式 hash 或 html5
 VITE_ROUTER_HISTORY = 'hash'
@@ -10,3 +10,5 @@ VITE_ROUTER_HISTORY = 'hash'
 VITE_PUBLIC_PATH = '/'
 
 VITE_API_BASE_URL=http://127.0.0.1:8080
+VITE_BASE_API = 'https://mock.mengxuegu.com/mock/66be0c9755057713835fe7c0/'
+VITE_GO_API_BASE_URL = 'http://127.0.0.1:8080'
