--- a/.env.development
+++ b/.env.development
@@ -11,4 +11,4 @@ VITE_PUBLIC_PATH = '/'
 
 VITE_API_BASE_URL=http://127.0.0.1:8080
 VITE_BASE_API = 'https://mock.mengxuegu.com/mock/66be0c9755057713835fe7c0/'
-VITE_GO_API_BASE_URL = 'http://127.0.0.1:8080'
+VITE_GO_API_BASE_URL = http://127.0.0.1:8080
