--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cilikube",
   "private": true,
-  "version": "0.3.3",
+  "version": "0.3.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,18 +9,22 @@
     "preview": "vite preview",
     "build:stage": "vue-tsc --noEmit && vite build --mode staging",
     "build:prod": "vue-tsc --noEmit && vite build",
+    "build:analyze": "vite build --mode production && npx vite-bundle-analyzer dist/stats.html",
     "preview:stage": "pnpm build:stage && vite preview",
     "preview:prod": "pnpm build:prod && vite preview",
     "lint:eslint": "eslint --cache --max-warnings 0 \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\"",
     "lint": "pnpm lint:eslint && pnpm lint:prettier",
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "type-check": "vue-tsc --noEmit",
+    "clean": "rm -rf dist node_modules/.vite",
+    "deps:update": "pnpm update --interactive --latest"
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.3.1",
     "@guolao/vue-monaco-editor": "^1.5.5",
     "@types/js-yaml": "^4.0.9",
-    "auto-changelog": "^2.5.0",
     "axios": "^1.9.0",
     "dayjs": "1.11.12",
     "echarts": "^5.6.0",
@@ -32,7 +36,6 @@
     "lodash-es": "4.17.21",
     "mitt": "3.0.1",
     "normalize.css": "8.0.1",
-    "npm": "^11.3.0",
     "nprogress": "0.2.0",
     "path-browserify": "1.0.1",
     "path-to-regexp": "7.1.0",
@@ -40,7 +43,6 @@
     "screenfull": "6.0.2",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
-    "vue-monaco-editor": "^0.0.19",
     "vue-router": "^4.5.1",
     "vxe-table": "^4.13.16",
     "vxe-table-plugin-element": "^4.0.4",
