--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "screenfull": "6.0.2",
     "vue": "^3.5.22",
     "vue-echarts": "^7.0.3",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3",
     "vxe-table": "^4.17.3",
     "vxe-table-plugin-element": "^4.0.4",
